estudantes visualizam notas gerais

--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -184,235 +184,7 @@
             </a>
             <br>
             
-            {% if user.tipo_de_usuario == 4 %}
-                <a style="color:black" href="{% url 'edita_notas' alocado.id %}">
-            {% endif %}
-              {% if alocado.get_notas %}
-                Notas: 
-                {% for aval, nota, peso, descr in alocado.get_notas %}
-                  <span style="background-color:#eef;" data-toggle="tooltip" data-html="true" animation="true" 
-                   title="{{descr}} | peso={{peso|floatformat:3}}%">
-                    {{aval}}={% if peso > 0 %}{{nota|floatformat:1}}{% else %}{% if nota > 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
-                  </span>
-                {% endfor %}
-                &nbsp;|
-              {% endif %}
-
-              &nbsp;
-              Média = 
-              {% with media=alocado.get_media %}
-                {% if media.media < 5 %}
-                    <span style="color:red">
-                {% endif %}
-                {% if media.pesos != 1 %}
-                  <a style="color:orange" data-toggle="tooltip" data-html="true" animation="true" title="Pesos da média diferente de 100% ({% widthratio media.pesos 1 100 %}%)">
-                {% endif %}
-                {{media.media|floatformat:1}}
-                {% if media.pesos != 1 %}
-                  </a>
-                {% endif %}
-                {% if media.media < 5 %}
-                    </span>
-                {% endif %}
-              {% endwith %}
-
-            {% if user.tipo_de_usuario == 4 %}
-                </a>
-            {% endif %}
-
-            {% if alocado.peso > 0 %}
-                <div class="table-responsive">
-                    <div class="row mt-1 justify-content-md-center" style="width: 99%;">
-                        <div style="position: relative; height:203px; width:406px;"><canvas id="radial-geral{{alocado.id}}"></canvas></div>
-                        <div style="position: relative; height:203px; width:406px;"><canvas id="radial-individual{{alocado.id}}"></canvas></div>
-                        <div style="position: relative; height:203px; width:406px;"><canvas id="radial-grupo{{alocado.id}}"></canvas></div>
-                    </div>
-                </div>
-                <small>Exibição radar supõe mesmo peso para todas as avaliações</small>
-            
-                {% with medias_oo=alocado.get_medias_oo %}
-                    <script>
-                        var config_radial_individual{{alocado.id}} = {
-                            type: 'radar',
-                            data: {
-                                labels: [
-                                        {% for key, value  in medias_oo.media_individual.items %}
-                                            {% if value.media >= 0 %}
-                                                "{{key.titulo}}",
-                                            {% else %}
-                                                "",
-                                            {% endif %}
-                                        {% endfor %}
-                                    ],
-                                datasets: [
-                                    {
-                                    label: "Objetivos de Aprendizagem",
-                                    pointBackgroundColor: [
-                                        {% for key, value in medias_oo.media_individual.items %}
-                                            {% comment %} {% if value.media >= 0 %} {% endcomment %}
-                                                "{{value.cor}}",
-                                            {% comment %} {% endif %} {% endcomment %}
-                                        {% endfor %}
-                                        ],
-                                    data: [
-                                        {% for key, value in medias_oo.media_individual.items %}
-                                            {% if value.media >= 0 %}
-                                                {{value.media|stringformat:".2f"|unlocalize}},
-                                            {% else %}
-                                                null,
-                                            {% endif %}
-                                        {% endfor %}
-                                        ],
-                                    scaleOverride: true,
-                                    pointRadius: 5,
-                                    backgroundColor: "rgba(0,0,240,0.1)",
-                                    },
-                                ]
-                            },
-                            options: {
-                                legend: { display: false },
-                                title: {
-                                    display: true,
-                                    text: 'Avaliação Individual'
-                                },
-                                scale: {
-                                    angleLines: {
-                                        display: false
-                                    },
-                                    ticks: {
-                                        beginAtZero: true,
-                                        suggestedMin: 0,
-                                        suggestedMax: 10
-                                    }
-                                },
-                            }
-                        }
-
-                        var config_radial_grupo{{alocado.id}} = {
-                            type: 'radar',
-                            data: {
-                                labels: [
-                                    {% for key, value in medias_oo.media_grupo.items %}
-                                        {% if value.media >= 0 %}
-                                            "{{key.titulo}}",
-                                        {% else %}
-                                            "",
-                                        {% endif %}
-                                    {% endfor %}
-                                    ],
-                                datasets: [
-                                    {
-                                    label: "Objetivos de Aprendizagem",
-                                    pointBackgroundColor: [
-                                        {% for key, value in medias_oo.media_grupo.items %}
-                                            {% comment %} {% if value.media >= 0 %} {% endcomment %}
-                                                "{{value.cor}}",
-                                            {% comment %} {% endif %} {% endcomment %}
-                                        {% endfor %}
-                                        ],
-                                    data: [
-                                        {% for key, value in medias_oo.media_grupo.items %}
-                                            {% if value.media >= 0 %}
-                                                {{value.media|stringformat:".2f"|unlocalize}},
-                                            {% else %}
-                                                null,
-                                            {% endif %}
-                                        {% endfor %}
-                                        ],
-                                    scaleOverride: true,
-                                    pointRadius: 5,
-                                    backgroundColor: "rgba(0,0,240,0.1)",
-                                    },
-                                ]
-                            },
-                            options: {
-                                legend: { display: false },
-                                title: {
-                                    display: true,
-                                    text: 'Avaliação Grupo'
-                                },
-                                scale: {
-                                    angleLines: {
-                                        display: false
-                                    },
-                                    ticks: {
-                                        beginAtZero: true,
-                                        suggestedMin: 0,
-                                        suggestedMax: 10
-                                    }
-                                },
-                            }
-                        }
-
-                        var config_radial_geral{{alocado.id}} = {
-                            type: 'radar',
-                            data: {
-                                labels: [
-                                    {% for key, value in medias_oo.medias_geral.items %}
-                                        {% if value.media >= 0 %}
-                                            "{{key.titulo}}",
-                                        {% else %}
-                                            "",
-                                        {% endif %}
-                                    {% endfor %}
-                                    ],
-                                datasets: [
-                                    {
-                                    label: "Objetivos de Aprendizagem",
-                                    pointBackgroundColor: [
-                                        {% for key, value in medias_oo.medias_geral.items %}
-                                            {% comment %} {% if value.media >= 0 %} {% endcomment %}
-                                                "{{value.cor}}",
-                                            {% comment %} {% endif %} {% endcomment %}
-                                        {% endfor %}
-                                        ],
-                                    data: [
-                                        {% for key, value in medias_oo.medias_geral.items %}
-                                            {% if value.media >= 0 %}
-                                                {{value.media|stringformat:".2f"|unlocalize}},
-                                            {% else %}
-                                                null,
-                                            {% endif %}
-                                        {% endfor %}
-                                        ],
-                                    scaleOverride: true,
-                                    pointRadius: 5,
-                                    backgroundColor: "rgba(0,0,240,0.1)",
-                                    },
-                                ]
-                            },
-                            options: {
-                                legend: { display: false },
-                                title: {
-                                    display: true,
-                                    text: 'Avaliação Geral'
-                                },
-                                scale: {
-                                    angleLines: {
-                                        display: false
-                                    },
-                                    ticks: {
-                                        beginAtZero: true,
-                                        suggestedMin: 0,
-                                        suggestedMax: 10
-                                    }
-                                },
-                            }
-                        }
-
-                        // Chart radial do nível nos objetivos de aprendizagem
-                        var radial_geral{{alocado.id}} = document.getElementById("radial-geral{{alocado.id}}").getContext("2d");
-                        new Chart(radial_geral{{alocado.id}}, config_radial_geral{{alocado.id}});
-
-                        var radial_individual{{alocado.id}} = document.getElementById("radial-individual{{alocado.id}}").getContext("2d");
-                        new Chart(radial_individual{{alocado.id}}, config_radial_individual{{alocado.id}});
-
-                        var radial_grupo{{alocado.id}} = document.getElementById("radial-grupo{{alocado.id}}").getContext("2d");
-                        new Chart(radial_grupo{{alocado.id}}, config_radial_grupo{{alocado.id}});
-
-                    </script>
-                {% endwith %}
-            {% endif %}
+            {% include "display_notas_individuais.html" %}
             <br><br>
 
             {% if not alocado.get_relatos|empty_zip and alocado.projeto.ano > 2021 %}  {% comment %} projetos até 2021 tinham o relato pelo Blackboad {% endcomment %}
