--- a/professores/templates/professores/banca_ver.html
+++ b/professores/templates/professores/banca_ver.html
@@ -104,5 +104,8 @@
       </li>
     {% endfor %}
   </ul>
+  <br>
+
+  <a href="{% url 'conceitos_obtidos' banca.projeto.id %}"><button type="button" class="btn btn-secondary">Resultados da Banca</button></a>
 
 {% endblock %}
