--- a/professores/templates/professores/avaliar_entregas.html
+++ b/professores/templates/professores/avaliar_entregas.html
@@ -85,7 +85,7 @@
 
             <div style="margin:8px 0px 3px 0px; "><strong>Entregas:</strong></div>
             {% for item in entregas %}
-            {% with dias_ate=item.evento.endDate|dif_dias_hoje dias=14 %} {% comment %} Eventos são mostrados duas semanas antes do prazo {% endcomment %}
+            {% with dias_ate=item.evento.endDate|dif_dias_hoje dias=-1 %} {% comment %} Eventos são mostrados duas semanas antes do prazo {% endcomment %}
               <div class="pintern" style="margin-top: {% if forloop.first %}0{% else %}10{% endif %}px;"> {% comment %} {% if dias_ate > dias %}{% endif %} {% endcomment %}
                 <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>
                   {% if item.composicao.tipo_documento %}
@@ -101,9 +101,9 @@
                   {% comment %} onClick="check_prazo('{{item.evento.endDate|date:"Y-m-d"}}T23:59:59');" {% endcomment %}
                 <br>
                 {% if item.composicao.exame.grupo %}
-                  <ul style="padding-left: 22px; width: fit-content;">
+                  <ul style="padding-left: 22px; width: fit-content;" {% if dias_ate > dias %}class="lightgrey"{% endif %}>
                     {% for documento in item.documentos %}
-                      <li style="list-style-type:'&#128463; ';">
+                      <li style="list-style-type:'&#128463; ';" {% if dias_ate > dias %}class="lightgrey"{% endif %}>
                         {% if forloop.first%}<b>{% endif %}
                         {% if documento.documento or documento.link %}
                           <a {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
@@ -117,6 +117,11 @@
                         {% if documento.data|diff_days:item.evento.endDate > 0 %}<span style="color: red;">[ENTREGUE APÓS PRAZO]</span>{% endif %}
                         {% if forloop.first%}</b>{% endif %}  
                       </li>
+                      {% if item.avaliacoes and item.avaliacoes.first%}
+                        {% if documento.data > item.avaliacoes.first.momento %}
+                          <span style="color: red;">Avaliação desatualizada, refazer para a nova entrega!</span>
+                        {% endif %}
+                      {% endif %}
                     {% empty %}
                       {% if item.composicao.tipo_documento %}
                         <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>sem arquivos</span><br>
@@ -126,15 +131,14 @@
                   </ul>
 
                 {% else %}
-
-                  {% for alocacao, values in item.alocacoes.items %}
-                    <hr><b>&#10040; {{alocacao.aluno.user.get_full_name}}:</b>
-                    <ul style="padding-left: 32px; width: fit-content;">
+                  {% for alocacao, values in item.alocacoes.items %} 
+                    <hr><b {% if dias_ate > dias %}class="lightgrey"{% endif %}>&#10040; {{alocacao.aluno.user.get_full_name}}:</b>
+                    <ul style="padding-left: 32px; width: fit-content;" {% if dias_ate > dias %}class="lightgrey"{% endif %}>
                       {% for documento in values.documentos %}
-                        <li style="list-style-type:'&#128463; ';">
+                        <li style="list-style-type:'&#128463; ';" {% if dias_ate > dias %}class="lightgrey"{% endif %}>
                           {% if forloop.first%}<b>{% endif %}
                           {% if documento.documento or documento.link %}
-                            <a {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {{documento.usuario.get_full_name}}"{% endif %}
+                            <a {% if documento.usuario %} data-toggle="tooltip" data-html="true" animation="true" title="Entregue por {% if documento.usuario %}{{documento.usuario.get_full_name}}{% else %}(ERRO AO IDENTIFICAR ESTUDANTE){% endif %}"{% endif %}
                              {% if dias_ate > dias %}class="lightgrey"{% endif %}
                              href="{% url 'entrega_avaliar' item.composicao.id projeto.id documento.usuario.id %}"
                              target="_blank" rel="noopener noreferrer">
@@ -142,11 +146,6 @@
                               <span class="opt_full">{{ documento.data|date:"DATETIME_FORMAT" }}</span>
                               <span class="opt_short">{{ documento.data|date:"d/m/y H:i" }}</span>
                             </a>
-                          {% endif %}
-                          {% if documento.usuario %}
-                            ({{documento.usuario.get_full_name}})
-                          {% else %}
-                            (ERRO AO IDENTIFICAR ESTUDANTE)
                           {% endif %}
                           {% if documento.data|diff_days:item.evento.endDate > 0 %}<span style="color: red;">[ENTREGUE APÓS PRAZO]</span>{% endif %}
                           {% if forloop.first%}</b>{% endif %}  
