--- a/templates/display_notas_individuais.html
+++ b/templates/display_notas_individuais.html
@@ -12,14 +12,14 @@
 
 <script>
   var nota = 0.0;
-  var peso = 0.0;  
+  var peso = 0.0;
 </script>
 {% if user.tipo_de_usuario == 4 %}
   <a style="color:black" href="{% url 'edita_notas' alocado.id %}">
 {% endif %}
-{% if alocado.get_notas %}
+{% if notas %}
   Notas: 
-  {% for aval, nota, peso, descr in alocado.get_notas %}
+  {% for aval, nota, peso, descr in notas %}
     <span style="background-color:#eef; cursor:pointer;" data-toggle="tooltip" data-html="true" animation="true" 
     title="{{descr}} | peso={{peso|floatformat:3}}%">
       {{aval}}={% if peso > 0 %}{{nota|floatformat:1}}{% else %}{% if nota > 5 %}&#128077;{% else %}&#128078;{% endif %}{% endif %}
