--- a/professores/templates/professores/avaliar_entregas.html
+++ b/professores/templates/professores/avaliar_entregas.html
@@ -75,13 +75,14 @@
             <br>
 
             <strong>Grupo:</strong>
-            <ul style="padding-left: 34px;">
+            <ul style="padding-left: 24px;">
               {% for alocacao in projeto.alocacao_set.all %}
                 <li>
                   <a href="{% url 'estudante_detail' alocacao.aluno.id %}">
                     {{alocacao.aluno.user.get_full_name}}
                   </a>
-                  [{{ alocacao.aluno.curso2 }}]
+                  <span class="opt_full">[{{ alocacao.aluno.curso2 }}]</span>
+                  <span class="opt_short">[{{ alocacao.aluno.curso2.sigla_curta }}]</span>
                   <a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
                 </li>
               {% endfor %}
@@ -105,7 +106,7 @@
                   {% comment %} onClick="check_prazo('{{item.evento.endDate|date:"Y-m-d"}}T23:59:59');" {% endcomment %}
                 <br>
                 {% if item.composicao.exame.grupo %}
-                  <ul style="padding-left: 22px; " {% if dias_ate > dias %}class="lightgrey"{% endif %}>
+                  <ul style="padding-left: 22px;" {% if dias_ate > dias %}class="lightgrey"{% endif %}>
                     {% for documento in item.documentos %}
                       <li style="list-style-type:'';" {% if dias_ate > dias %}class="lightgrey"{% endif %}>
                         {% if forloop.first%}<b>{% endif %} <span class="fa fa-file"></span>
