--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -208,12 +208,12 @@
 
 {% block content %}
 
-  <span class="titulo">Bancas
+  <span class="titulo">Agendar Bancas
     <small>
       <a data-toggle="tooltip" data-html="true" animation="true" title="Agenda Nova Banca" class="open-modal"
-            data-url="{% url 'bancas_criar' %}" href="{% url 'bancas_criar'%}"> 
-            &#10133;
-        </a>
+          data-url="{% url 'bancas_criar' %}" href="{% url 'bancas_criar'%}"> 
+          &#10133;
+      </a>
     </small>
   </span>
 
