--- a/professores/templates/professores/entrega_avaliar.html
+++ b/professores/templates/professores/entrega_avaliar.html
@@ -141,7 +141,12 @@
       {% comment %} Observações somente para leitura dos estudantes {% endcomment %}
       <label for="observacoes_estudantes"><span data-toggle="tooltip" data-html="true" animation="true"
              title="Insira qualquer observação que achar relavante para o grupo de estudantes.">
-        <span lang="pt"><b>Observações Estudantes</b> (enviada para todo o grupo)</span ><span lang="en"><b>Evaluation Observations for Students</b> (will be sent to all students)</span>:
+        <span lang="pt"><b>Observações Estudantes</b>
+          {% if composicao.exame.grupo %}(enviada para todo o grupo){% else %}(enviada para estudante){% endif %}
+          </span>
+        <span lang="en"><b>Evaluation Observations for Students</b> 
+          {% if composicao.exame.grupo %}(will be sent to all students){% else %}(will be sent to student){% endif %}
+          </span>:
       </span></label><br>
       <textarea id="observacoes_estudantes" name="observacoes_estudantes" rows="8" cols="100" maxlength="2048">{{observacao.observacoes_estudantes}}</textarea>
       <br><br>
