--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -299,6 +299,8 @@
               $(".atualizar").replaceWith($(".atualizar",response));
               //$("#organizacao").prop('checked') ? $('#ProjetosTable tr > *:nth-child(2)').show() : $('#ProjetosTable tr > *:nth-child(2)').hide()
               //$("#orientador").prop('checked') ? $('#ProjetosTable tr > *:nth-child(3)').show() : $('#ProjetosTable tr > *:nth-child(3)').hide()
+              $(".tooltip-inner").remove();
+              $(".tooltip-arrow").remove();
               {% include "tooltip.js" %}
               //$("#spinner").css("visibility", "hidden");
               $(".to_label").removeClass("label_animado");
