--- a/propostas/templates/propostas/procura_propostas.html
+++ b/propostas/templates/propostas/procura_propostas.html
@@ -357,6 +357,8 @@
             },
             success: function(response){
                 $("div.2areas2").replaceWith($("div.2areas2",response));
+                $(".tooltip-inner").remove();
+                $(".tooltip-arrow").remove();
                 chart();
             },
             error: function (request, status, error) {
