--- a/users/templates/users/edita_nota.html
+++ b/users/templates/users/edita_nota.html
@@ -14,8 +14,8 @@
   <style>
     textarea {
       max-width: 95%;
-      margin: 0px 10px 10px 10px;
-      display: inline-block;
+      margin: 0px 10px 6px 10px;
+      display: block;
     }
     ul {
       list-style-type: none;
@@ -44,8 +44,8 @@
 
   <b>Nome:</b> <a href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno.user.get_full_name}}</a><br>
   <b>Projeto:</b> <a href="{% url 'projeto_completo' alocacao.projeto.id %}">
-                {{alocacao.projeto.get_titulo}}
                 ({{alocacao.projeto.organizacao.nome}})
+                {{alocacao.projeto.get_titulo}}      
                 { {{alocacao.projeto.ano}}.{{alocacao.projeto.semestre}} }
                 {% include "tipo_projeto.html" with projeto=alocacao.projeto %}
             </a><br>
@@ -117,10 +117,14 @@
             {% endwith %}
           </ul>
           {% with observacoes=observacoes|pega_tipo:composicao.exame|pega_avaliador:aval_id %}
-            <span style="margin-left: 10px;">Observações:</span><br>
-            <textarea id="a{{composicao.exame.id}}_obs" name="a{{composicao.exame.id}}_obs"
+            <span style="display: inline-block; margin-top: 6px; margin-left: 10px;">Observações para Estudantes:</span><br>
+            <textarea id="a{{composicao.exame.id}}_obs_estudantes" name="a{{composicao.exame.id}}_obs_estudantes"
                       rows="4" cols="80" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
-              >{% if observacoes %}{{observacoes.last.observacoes_orientador}}{% endif %}</textarea>
+              >{% if observacoes.last.observacoes_estudantes %}{{observacoes.last.observacoes_estudantes}}{% endif %}</textarea>
+            <span style="display: inline-block; margin-top: 6px; margin-left: 10px;">Observações para Orientador:</span><br>
+            <textarea id="a{{composicao.exame.id}}_obs_orientador" name="a{{composicao.exame.id}}_obs_orientador"
+                      rows="4" cols="80" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}
+              >{% if observacoes.last.observacoes_orientador %}{{observacoes.last.observacoes_orientador}}{% endif %}</textarea>
             <br>
           {% endwith %}
 
@@ -142,7 +146,7 @@
     <br>
 
     <br><br>
-    <input type="submit" value="Atualiza Notas" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
+    <input class="btn btn-primary" type="submit" value="Atualiza Notas" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
     
   </form>
 
